--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
     text-decoration: underline;
 }
 
+header>.fancy-header{
+    text-align: center;
+}
+
 /*
     What do the above exercises tell you about the precedence of style attributes and embedded and external stylesheets?
 
