--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,19 @@ header>.fancy-header{
     text-align: center;
 }
 /*Add a style to change the background color of the page.*/
+/*Add a style to add a background image to your background. Search how to manipulate the position, sizing of this background image.*/
 body{
-    background: linear-gradient(to bottom, red, orange, red);
+    /*background: linear-gradient(to bottom, red, orange, red);*/
+    background-image: url("https://fer-uig.glitch.me");
+    background-repeat: no-repeat;
+    background-size: 80vw 80vh;
+    background-position-x: 100px;
+    background-position-y: 100px;
+    background-attachment: fixed;
+
 }
+
+
 
 /*
     What do the above exercises tell you about the precedence of style attributes and embedded and external stylesheets?
