--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,11 @@ body{
 }
 
 
+/*Add a style to change the list-style to something other than the default bullet.*/
+li {
+    list-style: square;
+}
+
 
 /*
     What do the above exercises tell you about the precedence of style attributes and embedded and external stylesheets?
